tests/failing/forgot_type_import.rgo
@/printf
@/exit
foo: (n: int) {  // Error: forgot to import int
    printf("Number\n", exit(0))
}
foo(1)
